--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">Slash<span> Key </span>2.0</a></h1> -->
         <!-- slash key logo  -->
-        <a href="#intro" class="scrollto"><img src="./img/Copy of logo.png" alt="SlashKey" title=""></a>
+        <a href="#intro" class="scrollto"><img src="./img/Copy of logo white.png" alt="Pi-Hack" title="" ></a>
       </div>
 
       <nav id="nav-menu-container">
@@ -311,21 +311,21 @@
       </div>
 
       <div class="owl-carousel gallery-carousel">
-        <a href="img/Copy of _MG_0031.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1.webp"
+        <a href="img/Copy of _MG_0031.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of _MG_0031.JPG"
             alt=""></a>
-        <a href="img/Copy of Copy of _MG_0706.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2.webp"
+        <a href="img/Copy of Copy of _MG_0706.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of Copy of _MG_0706.JPG"
             alt=""></a>
-        <a href="img/Copy of Copy of _MG_0661.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3.webp"
+        <a href="img/Copy of Copy of _MG_0661.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of Copy of _MG_0661.JPG"
             alt=""></a>
-        <a href="img/Copy of Copy of _MG_0343.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4.webp"
+        <a href="img/Copy of Copy of _MG_0343.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of Copy of _MG_0343.JPG"
             alt=""></a>
-        <a href="img/Copy of Copy of _MG_0729.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.webp"
+        <a href="img/Copy of Copy of _MG_0729.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of Copy of _MG_0729.JPG"
             alt=""></a>
-        <a href="img/Copy of _MG_0057.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.webp"
+        <a href="img/Copy of _MG_0057.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of _MG_0057.JPG"
             alt=""></a>
-        <a href="img/Copy of _MG_0055.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.webp"
+        <a href="img/Copy of _MG_0055.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of _MG_0055.JPG"
             alt=""></a>
-        <a href="img/Copy of _MG_0040.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/8.webp"
+        <a href="img/Copy of _MG_0040.JPG" class="venobox" data-gall="gallery-carousel"><img src="img/Copy of _MG_0040.JPG"
             alt=""></a>
       </div>
 
@@ -386,7 +386,7 @@
             </div>
           </div>
 
-           <div class="col-md-4">
+           <div class="col-md-12">
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
@@ -394,13 +394,14 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-12">
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
               <p><a href="ieeecs@gecidukki.ac.in">ieeecs@gecidukki.ac.in</a></p>
             </div>
           </div> 
+        
 
         </div>
       </div>
@@ -419,7 +420,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <!-- logo here  -->
-            <img src="./img/Copy of logo.png" alt="Pi-Hack">
+            <img src="./img/Copy of logo white.png" alt="Pi-Hack">
             <!-- <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate cupiditate debitis accusamus repellat cumque.</p> -->
           </div>
 
