--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">Slash<span> Key </span>2.0</a></h1> -->
-        <!-- slash key logo  -->
+        <!-- Pi-hack LOgo key logo  -->
         <a href="#intro" class="scrollto"><img src="./img/Copy of logo white.png" alt="Pi-Hack" title="" ></a>
       </div>
 
