--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- <h1 class="mb-4 pb-0"> Slash<span> Key</span> 2.0</h1> -->
       <img class="" src="./img/Copy of logo.png" alt="">
       <p class="mt-4">27-28 February, Government Engineering College Idukki</p>
-      <a href="#yepdesk" class="about-btn scrollto">Register Now</a>
+      <a href="#register" class="about-btn scrollto">Register Now</a>
       <a href="#about" class="about-btn scrollto">About The Event</a>
     </div>
   </section>
@@ -447,11 +447,11 @@
             </p>
 
             <div class="social-links">
-              <a href="https://twitter.com/ieeecsks?lang=en" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.facebook.com/IEEECSKS/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/ieeesbeci?lang=en" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/IEEESBGECI/" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="https://www.instagram.com/ieee_cs_geci/" class="instagram"><i class="fa fa-instagram"></i></a>
               <!--<a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>-->
-              <a href="https://www.linkedin.com/company/ieeecsks" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/ieeesbgeci/mycompany/" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
           </div>
