--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     Header
   ============================-->
   <header id="header">
+    
     <div class="container">
 
       <div id="logo" class="pull-left">
@@ -67,6 +68,24 @@
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
+
+  <div class="wrapper">
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+    <div><span class="dot"></span></div>
+  </div>
 
   <!--==========================
     Intro Section
